# book-builder

./: .gitignore  Cargo.toml  README.md
example/assets/themes/rose-pine/: rose-pine.sublime-color-scheme  rose-pine.tmTheme
example/chapters/00-why-async/: 00-intro.md  01-single-threaded.md
example/chapters/01-async-example/: 00-intro.md
src/: main.rs  pdf.rs  toc.rs
src/printpdf/: color.rs  ctm.rs  document_info.rs  errors.rs  extgstate.rs  font.rs  image.rs  line.rs  mod.rs  pdf_document.rs  pdf_layer.rs  pdf_metadata.rs  pdf_page.rs  pdf_resources.rs  point.rs  scale.rs  svg.rs  utils.rs  xmp_metadata.rs  xobject.rs
