[package]
name = "book-builder"
version = "0.0.1"
edition = "2021"

[dependencies]
walkdir = "2.3"
indexmap = "1"
comrak = { version = "0.17.0", default-features = false }
syntect = { version = "5.0.0", default-features = false, features = ["default-fancy"] }

cosmic-text = { git = "https://github.com/conradludgate/cosmic-text", branch="custom-font-scaling", default-features = false, features = ["std"] }
pretty_env_logger = "0.4.0"

image = "0.24"


lopdf = { version = "0.29.0", default-features = false, features = [
    "pom_parser",
] }
time = { version = "0.3", default-features = false, features = ["std"] }
svg2pdf = { version = "0.4.0" }
pdf-writer = { version = "0.6.0" }
usvg = { version = "0.22.0" }
nanorand = "0.7.0"
base64 = "0.21"
